# low-latency-trading-pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
afxdp/: afxdp_receiver.c  afxdp_receiver.h  xdp_filter.bpf.c
apps/client/: client.c  order_sender.c  udp_receiver.c
apps/engine/: dispatcher.cpp
apps/observer/: wire_observer.cpp
apps/server/: feed.c  order_receiver.c  rewinder.c  server.c
client/: client.c  client.h  order_sender.c  udp_receiver.c
dashboard/: app.js  index.html  styles.css
data/: README.md
engine/: batch_structs.hpp  dispatcher.cpp  dispatcher.hpp
engine/cpu/: cpu_entry.cpp  cpu_entry.hpp
engine/oms/: oms.cpp  oms.hpp  order.hpp
engine/risk/: risk.cpp  risk.hpp
engine/strategy/: imbalance_strat.cpp  imbalance_strat.hpp
include/hft/: config.h
include/hft/afxdp/: afxdp_tx.h
include/hft/client/: client.h
include/hft/engine/: batch_sizes.hpp  batch_structs.hpp  dispatcher.hpp  events.h  itch_book_adapter.hpp  universe.hpp
include/hft/engine/cpu/: cpu_entry.hpp
include/hft/engine/oms/: oms.hpp  order.h  order.hpp
include/hft/engine/risk/: risk.hpp
include/hft/engine/sim/: fill_sim.hpp
include/hft/engine/strategy/: imbalance_strat.hpp  mm_mean_reversion.hpp  signal.hpp
include/hft/itch/: itch_handler.h  packet.h
include/hft/parser/: parser_to_engine.h
include/hft/pools/eventPool/: eventPool.hpp  eventPool_wrapper.h
include/hft/protocol/: wire.h
include/hft/ring_buffers/event/: event_to_engine.h
include/hft/ring_buffers/order/: order_to_exc.h
include/hft/ring_buffers/parser/: parser_to_engine.h
include/hft/server/: server.h
include/hft/telemetry/: telemetry.hpp
include/hft/utils/: checksum.h  moldudp64.h  utils.h
itch/: itch_handler.c  itch_handler.h  packet.h  structs.h  test_parser.c
parser/: parser_to_engine.c  parser_to_engine.h
pools/eventPool/: eventPool.cpp  eventPool.hpp  eventPool_wrapper.cpp  eventPool_wrapper.h
pools/messagePool/: messagePool.cpp  messagePool.hpp  messagePool_wrapper.cpp  messagePool_wrapper.h
results/: orders_127.0.0.1_44968_20260306_140247.txt
results/dashboard_20260515.compact/: summary.json
results/dashboard_20260516.compact/: summary.json
ring_buffers/event/: event_to_engine.h
ring_buffers/order/: order_to_exc.h
ring_buffers/parser/: parser_to_engine.h
scripts/: all.sh  build.sh  run_client.sh  run_engine.sh  run_server.sh  watch_latency.py
scripts/run/: all.sh  netns_setup.sh  observer.sh  server.sh  stack.sh  trading.sh
scripts/utils/: bench_latency.sh  bench_report.py  compact_dashboard_log.py  render_charts.py  top_symbols.py
server/: feed.c  order_receiver.c  server.c  server.h
services/control/: Dockerfile  package.json  server.js
src/afxdp/: afxdp_receiver.c  afxdp_tx.c  xdp_filter.bpf.c
src/engine/cpu/: cpu_entry.cpp
src/engine/oms/: oms.cpp
src/engine/risk/: risk.cpp
src/engine/strategy/: imbalance_strat.cpp
src/itch/: itch_handler.c  test_parser.c
src/parser/: parser_to_engine.c
src/pools/eventPool/: eventPool.cpp  eventPool_wrapper.cpp
src/pools/messagePool/: messagePool.cpp  messagePool_wrapper.cpp
src/telemetry/: telemetry.cpp
utils/: moldudp64.h  utils.h
